--- a/app/broker/management/cash-activities.html
+++ b/app/broker/management/cash-activities.html
@@ -20,6 +20,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -71,6 +72,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
