--- a/app/broker/management/trading-activities.html
+++ b/app/broker/management/trading-activities.html
@@ -20,6 +20,7 @@
             </div>
 
             <div class="col-sm-12 trade-activi">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -86,6 +87,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
