--- a/app/client/client-validation.html
+++ b/app/client/client-validation.html
@@ -50,6 +50,7 @@
                 </div>
 
                 <div class="col-sm-12" ng-if="result.resp">
+                    <div class="tbl-wrap">
                     <table class="table table-bordered table-hover table-responsive">
                         <tbody>
                         <tr>
@@ -89,6 +90,7 @@
                         </tr>
                         </tbody>
                     </table>
+                    </div>
                 </div>
             </div>
 
