--- a/app/client/client-import.html
+++ b/app/client/client-import.html
@@ -48,6 +48,7 @@
 
         <div class="panel-body row" ng-show="result && !result.success && result.rows.length">
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr class="primary">
@@ -62,6 +63,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
     </div>
