--- a/app/client/client-list.html
+++ b/app/client/client-list.html
@@ -72,6 +72,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -129,6 +130,7 @@
                     </td>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
