--- a/app/client/client-summary.html
+++ b/app/client/client-summary.html
@@ -78,6 +78,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -133,6 +134,7 @@
                     </td>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
