--- a/app/client/admin/reward-event-clients.html
+++ b/app/client/admin/reward-event-clients.html
@@ -7,6 +7,7 @@
                 <span class="glyphicon glyphicon-arrow-left"></span> Back
             </button>
         </div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -28,5 +29,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
