--- a/app/client/admin/reward-events.html
+++ b/app/client/admin/reward-events.html
@@ -56,6 +56,7 @@
 
         <div class="panel-body row">
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -99,6 +100,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
         </div>
     </div>
