--- a/app/client/fund/deposit-trading-account.html
+++ b/app/client/fund/deposit-trading-account.html
@@ -23,6 +23,7 @@
 
                 <div class="row" ng-show="view.exchangeRates.length">
                     <div class="col-sm-12">
+                        <div class="tbl-wrap">
                         <table class="table table-bordered table-hover table-responsive">
                             <thead class="text-success">
                             <tr class="active">
@@ -37,6 +38,7 @@
                             </tr>
                             </tbody>
                         </table>
+                        </div>
                     </div>
                 </div>
 
