--- a/app/client/fund/history.html
+++ b/app/client/fund/history.html
@@ -80,6 +80,7 @@
 
             <div class="row spacer-top" ng-show="result">
                 <div class="col-sm-12">
+                    <div class="tbl-wrap">
                     <table class="table table-striped table-hover table-responsive">
                         <thead>
                         <tr>
@@ -112,6 +113,7 @@
                         </tr>
                         </tfoot>
                     </table>
+                    </div>
                 </div>
             </div>
         </div>
