--- a/app/client/fund/withdrawal.html
+++ b/app/client/fund/withdrawal.html
@@ -100,6 +100,7 @@
 
         <div class="panel-body" ng-show="view.historyViewList.length">
             <h4 class="text-center">{{'Recent Withdrawal History'|translate}}</h4>
+            <div class="tbl-wrap">
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                 <tr>
@@ -118,6 +119,7 @@
                 </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 </div>
