--- a/app/client/homeScreen/summary.html
+++ b/app/client/homeScreen/summary.html
@@ -3,6 +3,7 @@
         <div class="panel-heading">
             <h4 class="panel-title">{{'Trading Accounts'|translate}}</h4>
         </div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -49,12 +50,14 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 
     <div class="panel panel-primary" style="margin-bottom:5px">
         <div class="panel-heading">
             <h4 class="panel-title">{{'Demo Accounts'|translate}}</h4>
         </div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -82,6 +85,7 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 
     <div class="row">
