--- a/app/system/messages.html
+++ b/app/system/messages.html
@@ -3,6 +3,7 @@
         <div class="panel-heading">
             <h4 class="heading">{{"Messages"|translate}}</h4>
         </div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive" ng-show="entities && entities.length">
             <thead>
             <tr>
@@ -37,6 +38,7 @@
             </tr>
             </tbody>
         </table>
+        </div>
         <div class="text-center" ng-show="!entities.length">
             {{"You don't have any messages."|translate}}
         </div>
