--- a/app/user/admin/agents.html
+++ b/app/user/admin/agents.html
@@ -54,6 +54,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -130,6 +131,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
             <div class="pagi-wrap">
                 <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
