--- a/app/user/admin/symbol-volume-maps.html
+++ b/app/user/admin/symbol-volume-maps.html
@@ -1,6 +1,7 @@
 <div ng-controller="SymbolVolumeMapsController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{'Volume Definition'|translate}}</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -31,5 +32,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
