--- a/app/user/admin/clients.html
+++ b/app/user/admin/clients.html
@@ -54,6 +54,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -116,6 +117,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
