--- a/app/user/admin/commission.html
+++ b/app/user/admin/commission.html
@@ -104,6 +104,7 @@
             <div class="panel-body">
                 <div class="row" ng-repeat="commissionLevelDefinitions in entityGroups">
                     <div class="col-sm-12">
+                        <div class="tbl-wrap">
                         <table class="table table-striped table-responsive">
                             <tbody>
                             <tr>
@@ -140,6 +141,7 @@
                             </tr>
                             </tbody>
                         </table>
+                        </div>
                     </div>
                 </div>
 
