--- a/app/user/admin/commissions.html
+++ b/app/user/admin/commissions.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h4 class="heading">{{"Commission Definitions"|translate}}</h4>
         </div>
-
+        <div class="tbl-wrap">
         <table class="table table-striped table-responsive">
             <thead>
             <tr>
@@ -84,5 +84,6 @@
             <tr ng-repeat-end ng-if="false"></tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
