--- a/app/user/admin/exchange-rates.html
+++ b/app/user/admin/exchange-rates.html
@@ -16,7 +16,8 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <table class="table table-striped table-hover table-responsive">
+                    <div class="tbl-wrap">
+                        <table class="table table-striped table-hover table-responsive">
                         <thead>
                         <tr>
                             <th>{{"Symbol 1"|translate}}</th>
@@ -48,6 +49,7 @@
                         </tr>
                         </tfoot>
                     </table>
+                    </div>
                 </div>
             </div>
         </div>
