--- a/app/user/admin/mt4-groups.html
+++ b/app/user/admin/mt4-groups.html
@@ -15,6 +15,7 @@
                 </div>
 
                 <div class="col-sm-12">
+                    <div class="tbl-wrap">
                     <table class="table table-striped table-hover table-responsive">
                         <thead>
                         <tr>
@@ -31,6 +32,7 @@
                         </tr>
                         </tbody>
                     </table>
+                    </div>
                 </div>
 
                 <div class="pagi-wrap">
