--- a/app/user/admin/scheduled-events.html
+++ b/app/user/admin/scheduled-events.html
@@ -3,6 +3,7 @@
         <div class="panel-heading"><h4 class="heading">{{"Scheduled Events"|translate}}</h4></div>
         <div class="panel-body">
             <div class="row col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -35,6 +36,7 @@
                     </tr>
                     </tfoot>
                 </table>
+                </div>
             </div>
         </div>
     </div>
