--- a/app/user/admin/user-history.html
+++ b/app/user/admin/user-history.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-sm-12">
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -14,5 +15,6 @@
             </tr>
             </tbody>
         </table>
+        </div>
     </div>
 </div>
