--- a/app/user/admin/user-work-group-permission.html
+++ b/app/user/admin/user-work-group-permission.html
@@ -1,3 +1,4 @@
+<div class="tbl-wrap">
 <table class="table table-striped table-hover table-responsive">
     <thead>
     <tr>
@@ -32,3 +33,4 @@
     </tr>
     </tfoot>
 </table>
+</div>
