--- a/app/user/admin/user.html
+++ b/app/user/admin/user.html
@@ -15,6 +15,7 @@
                         <p class="spacer"></p>
                         <div class="row">
                             <div class="col-sm-12">
+                                <div class="tbl-wrap">
                                 <table class="table table-striped table-hover table-responsive">
                                     <thead>
                                     <tr>
@@ -29,6 +30,7 @@
                                     </tr>
                                     </tbody>
                                 </table>
+                                </div>
                             </div>
                         </div>
                     </uib-tab>
