--- a/app/user/admin/users.html
+++ b/app/user/admin/users.html
@@ -22,6 +22,7 @@
                 </div>
             </div>
         </div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -91,5 +92,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
