--- a/app/user/admin/work-group-import.html
+++ b/app/user/admin/work-group-import.html
@@ -59,6 +59,7 @@
 
         <div class="panel-body row" ng-show="result && !result.success && result.rows.length">
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr class="primary">
@@ -73,6 +74,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
     </div>
