--- a/app/user/admin/work-types.html
+++ b/app/user/admin/work-types.html
@@ -1,6 +1,7 @@
 <div ng-controller="WorkTypesController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{'Work Types'|translate}}</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -34,5 +35,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
