--- a/app/user/admin/login/agent-login-admin.html
+++ b/app/user/admin/login/agent-login-admin.html
@@ -8,7 +8,7 @@
             </ul>
         </div>
     </div>
-
+    <div class="tbl-wrap">
     <table class="table table-striped table-hover table-responsive">
         <thead>
         <tr>
@@ -23,7 +23,7 @@
         </tr>
         </tbody>
     </table>
-
+    </div>
     <div class="pagi-wrap">
         <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
             <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
