--- a/app/user/clientScreen/mt4-logins.html
+++ b/app/user/clientScreen/mt4-logins.html
@@ -1,4 +1,5 @@
 <div ng-controller="ClientMt4LoginController">
+    <div class="tbl-wrap">
     <table class="table table-striped table-hover table-responsive">
         <thead>
         <tr>
@@ -43,4 +44,5 @@
         <tr ng-repeat-end ng-if="false"></tr>
         </tbody>
     </table>
+    </div>
 </div>
