--- a/app/user/common/job-files.html
+++ b/app/user/common/job-files.html
@@ -7,6 +7,7 @@
 
     <div class="row" ng-show="workList && workList.length">
         <div class="col-sm-12">
+            <div class="tbl-wrap">
             <table class="table table-striped table-hover table-responsive table-fixed">
                 <thead>
                 <tr>
@@ -49,6 +50,7 @@
                 </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 </div>
