--- a/app/user/common/job-tasks.html
+++ b/app/user/common/job-tasks.html
@@ -2,6 +2,7 @@
     <form novalidate role="form" name="editForm" ng-submit="save()">
         <div class="row">
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -128,6 +129,7 @@
                     </td>
                     </tfoot>
                 </table>
+                </div>
             </div>
         </div>
 
