--- a/app/user/common/jobs.html
+++ b/app/user/common/jobs.html
@@ -19,6 +19,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading"><h4 class="panel-title">{{"Active Jobs"|translate}}</h4></div>
     <div class="panel-body">
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -48,6 +49,7 @@
             </tr>
             </tbody>
         </table>
+        </div>
     </div>
 </div>
 
