--- a/app/user/common/work-note.html
+++ b/app/user/common/work-note.html
@@ -134,6 +134,7 @@
 
                 <div class="row">
                     <div class="col-sm-12">
+                        <div class="tbl-wrap">
                         <table class="table table-striped table-hover table-responsive">
                             <thead>
                             <tr>
@@ -153,6 +154,7 @@
                             </tr>
                             </tbody>
                         </table>
+                        </div>
                     </div>
                 </div>
 
@@ -180,6 +182,7 @@
 
                 <div class="row">
                     <div class="col-sm-12">
+                        <div class="tbl-wrap">
                         <table class="table table-striped table-hover table-responsive">
                             <thead>
                             <tr>
@@ -230,6 +233,7 @@
                             </tr>
                             </tfoot>
                         </table>
+                        </div>
                     </div>
                 </div>
 
