--- a/app/user/common/work-notes.html
+++ b/app/user/common/work-notes.html
@@ -119,6 +119,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive table-fixed">
                     <thead>
                     <tr>
@@ -181,6 +182,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
