--- a/app/user/homeScreen/follow-ups.html
+++ b/app/user/homeScreen/follow-ups.html
@@ -2,6 +2,7 @@
     <div class="panel panel-primary">
         <div class="panel-heading"><h4 class="panel-title">{{"Assigned to me"|translate}}</h4></div>
         <div class="panel-body">
+            <div class="tbl-wrap">
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                 <tr>
@@ -47,12 +48,14 @@
                 </tr>
                 </tfoot>
             </table>
+            </div>
         </div>
     </div>
 
     <div class="panel panel-primary" ng-if="followUpsAssignedByUser && followUpsAssignedByUser.length">
         <div class="panel-heading"><h4 class="panel-title">{{"Assigned by me"|translate}}</h4></div>
         <div class="panel-body">
+            <div class="tbl-wrap">
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                 <tr>
@@ -91,6 +94,7 @@
                 </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 </div>
