--- a/app/user/homeScreen/tasks.html
+++ b/app/user/homeScreen/tasks.html
@@ -2,6 +2,7 @@
     <div class="panel panel-primary">
         <div class="panel-heading"><h4 class="panel-title">{{"Active Tasks"|translate}}</h4></div>
         <div class="panel-body">
+            <div class="tbl-wrap">
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                 <tr>
@@ -29,6 +30,7 @@
                 </tr>
                 </tfoot>
             </table>
+            </div>
         </div>
     </div>
 </div>
