--- a/app/user/team/team-job-definition.html
+++ b/app/user/team/team-job-definition.html
@@ -64,6 +64,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
+                    <div class="tbl-wrap">
                     <table class="table table-striped table-hover table-responsive">
                         <thead>
                         <tr>
@@ -112,6 +113,7 @@
                         </tr>
                         </tfoot>
                     </table>
+                    </div>
                 </div>
             </div>
 
