--- a/app/user/team/team-job-definitions.html
+++ b/app/user/team/team-job-definitions.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </div>
-
+        <div class="tbl-wrap">
         <table class="table table-striped table-responsive">
             <thead>
             <tr>
@@ -50,5 +50,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
