--- a/app/user/team/team.html
+++ b/app/user/team/team.html
@@ -36,6 +36,7 @@
                         <p class="spacer"></p>
                         <div class="row">
                             <div class="col-sm-12">
+                                <div class="tbl-wrap">
                                 <table class="table table-striped table-hover table-responsive">
                                     <thead>
                                     <tr>
@@ -70,6 +71,7 @@
                                     </tr>
                                     </tfoot>
                                 </table>
+                                </div>
                             </div>
                         </div>
                     </uib-tab>
