--- a/app/user/team/teams.html
+++ b/app/user/team/teams.html
@@ -1,6 +1,7 @@
 <div ng-controller="TeamsController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{"Teams"|translate}}</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -42,5 +43,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
